    `Error: (string->number) bad argument type: #!eof` in some cases.
  - If chicken-install has a program prefix/suffix, it now writes to a
    cache directory matching its program name (#1713, thanks to Alice Maz)
  - Fixed bug in chicken-install regarding variable quotation on UNIX-like
    systems which prevented installation into paths with spaces (#1685).

- Module system
  - Fixed a memory leak when calling (import) multiple times in a row
    on the same module (#1772; reported by "plugd" on IRC).

5.2.0

- Core libraries
  - Fix `memory-statistics` by returning semi-space bytes and used
    semi-space bytes like the documentation says. Old implementation
    returned full-heap size and (full-heap - used-semi-space).
  - for-each and map now behave consistently in compiled and interpreted
    mode, like in SRFI-1.  They now stop when the shortest list is
    exhausted instead of raising an exception (fixes #1422).
  - There is now a srfi-88 module which contains just the three
    procedures from the (chicken keyword) module defined by the SRFI.
  - A feature identifier named "srfi-88" is now registered.
  - The procedures `record-printer` and `set-record-printer!` and a
    corresponding SRFI-17 setter have been added. These deprecate
    `define-record-printer` which isn't a "real" definition (see #1294).
  - On Windows, `decompose-directory` no longer crashes when a drive
    letter is present in the supplied path string.
  - irregex-replace[/all] have been fixed for empty matches, so they
    will no longer drop characters and ignore the replacement (#1661).
  - Irregex has been updated to upstream 0.9.7, which also improves
    how empty matches are treated in irregex-fold and irregex-split.

- Runtime system
  - Quoted empty keywords like ||: and :|| are now read like prescribed
    by SRFI-88 in the corresponding keyword mode.  Symbols containing
    quoted empty prefixes or suffixes like ||:abc and abc:|| will be